--- a/style.css
+++ b/style.css
@@ -1,59 +1,63 @@
 body {
-    background-color: black;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-  }
+  background-color: black;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-  a:link {
-    color: green;
-    background-color: transparent;
-    text-decoration: none;
-  }
-  
-  a:visited {
-    color: violet;
-    background-color: transparent;
-    text-decoration: none;
-  }
+a:link {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: violet;
+  background-color: transparent;
+  text-decoration: none;
+}
+
 /* The navigation bar */
 .navbar {
-    overflow: hidden;
-    position: fixed; /* Set the navbar to fixed position */
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
-  }
-  
-  /* Links inside the navbar */
-  .navbar a {
-    float: right;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    position: relative;    
-    top: -10px;
-    right: -10px;
-    left: -10px;
-    bottom: -10px;
-    padding: 14px 16px;     
-
-    text-decoration: none;
-  }
-  
-  /* Change background on mouse-over */
-  .navbar a:hover {
-    background: #ddd;
-    color: black;
-  }
-  
-  .content {
-    height: 94vh;
-    position: relative;
+  overflow: hidden;
+  position: fixed;
+  /* Set the navbar to fixed position */
+  top: 0;
+  /* Position the navbar at the top of the page */
+  width: 100%;
+  /* Full width */
 }
-  
+
+/* Links inside the navbar */
+.navbar a {
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  position: relative;
+  top: -10px;
+  right: -10px;
+  left: -10px;
+  bottom: -10px;
+  padding: 14px 16px;
+
+  text-decoration: none;
+}
+
+/* Change background on mouse-over */
+.navbar a:hover {
+  /* background: #ddd;*/
+  color: green;
+}
+
+.content {
+  height: 94vh;
+  position: relative;
+}
+
 .center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
